--- a/about.html
+++ b/about.html
@@ -504,46 +504,8 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-brand-navy text-white py-12">
-        <div class="max-w-7xl mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div>
-                    <h3 class="font-bold text-lg mb-4">Properties 4 Creations</h3>
-                    <p class="text-slate-300 text-sm">
-                        Connecting veterans with quality homes through fair market practices.
-                    </p>
-                </div>
-                <div>
-                    <h4 class="font-bold mb-4">Services</h4>
-                    <ul class="space-y-2 text-sm text-slate-300">
-                        <li><a href="properties.html" class="hover:text-brand-sage transition-colors">Property Sales</a></li>
-                        <li><a href="renovations.html" class="hover:text-brand-sage transition-colors">Renovations</a></li>
-                        <li><a href="management.html" class="hover:text-brand-sage transition-colors">Management</a></li>
-                        <li><a href="consulting.html" class="hover:text-brand-sage transition-colors">Consulting</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="font-bold mb-4">Resources</h4>
-                    <ul class="space-y-2 text-sm text-slate-300">
-                        <li><a href="resources/section8.html" class="hover:text-brand-sage transition-colors">Section 8 Guide</a></li>
-                        <li><a href="resources/voucher-calculator.html" class="hover:text-brand-sage transition-colors">Cost Calculator</a></li>
-                        <li><a href="insights.html" class="hover:text-brand-sage transition-colors">Market Insights</a></li>
-                        <li><a href="faq.html" class="hover:text-brand-sage transition-colors">FAQ</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="font-bold mb-4">Contact</h4>
-                    <div class="space-y-2 text-sm text-slate-300">
-                        <p>📞 (512) 555-PROPERTY</p>
-                        <p>💼 support@properties4creation.com</p>
-                    </div>
-                </div>
-            </div>
-            <div class="border-t border-slate-700 mt-8 pt-8 text-center text-sm text-slate-400">
-                <p>&copy; 2025 Properties 4 Creations. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+<!-- Footer Container -->
+<div id="footer-container"></div>
 
     <!-- P4C Interactive Libraries -->
     <!-- Unified Header Navigation Handler -->
