--- a/index.html
+++ b/index.html
@@ -187,83 +187,8 @@
     </script>
 </head>
 <body class="bg-brand-beige">
-    <!-- Unified Header - Same across all pages -->
-    <header id="main-header" class="sticky top-0 z-50 transition-all duration-300 bg-brand-navy text-white shadow-lg">
-        <div class="max-w-7xl mx-auto px-4">
-            <div class="flex items-center justify-between h-16">
-            <!-- Logo and Brand -->
-            <div class="flex items-center">
-                <a href="index.html" class="flex items-center space-x-3 group">
-                    <div class="w-10 h-10 rounded-lg overflow-hidden transform group-hover:scale-110 transition-transform duration-300">
-                        <img src="public/images/logo/brand_logo.png" alt="Properties 4 Creation" class="w-full h-full object-cover">
-                    </div>
-                    <span class="text-xl font-bold group-hover:text-slate-200 transition-colors duration-200 hidden sm:inline">
-                        Properties 4 Creation
-                    </span>
-                </a>
-            </div>
-
-                <!-- Desktop Navigation -->
-                <nav class="hidden lg:flex items-center space-x-8">
-                    <a href="index.html" class="px-3 py-2 text-sm font-medium rounded-md text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">Home</a>
-                    <a href="projects.html" class="px-3 py-2 text-sm font-medium rounded-md text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">Our Work</a>
-                    <a href="impact.html" class="px-3 py-2 text-sm font-medium rounded-md text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">Our Impact</a>
-                    <a href="resources.html" class="px-3 py-2 text-sm font-medium rounded-md text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">Housing Support</a>
-                    <a href="about.html" class="px-3 py-2 text-sm font-medium rounded-md text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">About Us</a>
-
-                    <!-- Search Button -->
-                    <button id="header-search-toggle" class="flex items-center gap-2 px-3 py-2 text-sm font-medium text-slate-200 hover:text-white hover:bg-white/10 rounded-md transition-all duration-200" title="Search (⌘K)">
-                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                        </svg>
-                    </button>
-
-                    <!-- Portal Button -->
-                    <button id="header-portal-toggle" class="px-3 py-2 text-sm font-medium text-slate-200 hover:text-white hover:bg-white/10 rounded-md transition-all duration-200">
-                        Portals
-                    </button>
-
-                    <!-- CTA Button -->
-                    <a href="get-started.html" class="wood-gradient-button text-white px-6 py-3 rounded-lg font-semibold text-sm hover:shadow-2xl hover:scale-105 transition-all duration-300 hover:shadow-brand-wood/25">
-                        Get Fair Offer
-                    </a>
-                </nav>
-
-                <!-- Mobile Menu Button -->
-                <button id="mobile-menu-toggle" class="lg:hidden p-2 rounded-md text-slate-200 hover:text-white hover:bg-white/10 transition-colors duration-200" aria-expanded="false" aria-label="Toggle navigation menu">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                    </svg>
-                </button>
-            </div>
-
-            <!-- Mobile Navigation Menu -->
-            <div id="mobile-menu" class="lg:hidden overflow-hidden transition-all duration-300 ease-in-out max-h-0 opacity-0 invisible -translate-y-2">
-                <div class="px-4 py-6 bg-slate-900/50 border-t border-white/10 backdrop-blur-sm space-y-4">
-                    <a href="index.html" class="block px-4 py-3 rounded-lg text-base font-medium text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">Home</a>
-                    <a href="projects.html" class="block px-4 py-3 rounded-lg text-base font-medium text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">Our Work</a>
-                    <a href="impact.html" class="block px-4 py-3 rounded-lg text-base font-medium text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">Our Impact</a>
-                    <a href="resources.html" class="block px-4 py-3 rounded-lg text-base font-medium text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">Housing Support</a>
-                    <a href="about.html" class="block px-4 py-3 rounded-lg text-base font-medium text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">About Us</a>
-                    
-                    <button id="mobile-search-toggle" class="w-full text-left px-4 py-3 rounded-lg text-base font-medium text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">
-                        <svg class="w-4 h-4 inline mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                        </svg>
-                        Search
-                    </button>
-
-                    <button id="mobile-portal-toggle" class="w-full text-left px-4 py-3 rounded-lg text-base font-medium text-slate-200 hover:text-white hover:bg-white/10 transition-all duration-200">
-                        Portals
-                    </button>
-
-                    <a href="get-started.html" class="block w-full text-center bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white px-4 py-3 rounded-lg font-medium transition-all duration-200 hover:shadow-lg mt-4">
-                        Get Fair Offer
-                    </a>
-                </div>
-            </div>
-        </div>
-    </header>
+    <!-- Header Container -->
+    <div id="header-container"></div>
 
     <!-- Main Content -->
     <main>
@@ -418,118 +343,8 @@
         </section>
     </main>
 
-    <footer class="bg-brand-navy text-white border-t border-white/5">
-        <div class="max-w-7xl mx-auto px-4 py-16">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-12">
-                <div class="lg:col-span-2">
-                    <div class="flex items-center space-x-3 mb-6">
-                        <div class="w-12 h-12 bg-white rounded-lg flex items-center justify-center p-1">
-                            <img src="public/images/logo/brand_logo.png" alt="Properties 4 Creation Logo" class="h-full w-auto">
-                        </div>
-                        <div>
-                            <h3 class="text-xl font-bold tracking-wide text-white">Properties 4 Creations</h3>
-                            <p class="text-wood-400 text-xs uppercase tracking-widest">Veteran Housing Solutions</p>
-                        </div>
-                    </div>
-                    <p class="text-slate-400 mb-6 leading-relaxed text-sm">
-                        Expert renovations and fair housing solutions for veterans. Transparent pricing, quality workmanship, nationwide service.
-                    </p>
-                    <div class="space-y-3 text-sm">
-                        <div class="flex items-center text-slate-300 hover:text-wood-400 transition-colors">
-                            <span class="mr-3 text-wood-500">📧</span>
-                            <a href="mailto:contact@properties4creations.com">contact@properties4creations.com</a>
-                        </div>
-                        <div class="flex items-center text-slate-300 hover:text-wood-400 transition-colors">
-                            <span class="mr-3 text-wood-500">📞</span>
-                            <a href="tel:+15125550123">(903) 647-0000</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <h4 class="text-sm font-bold uppercase tracking-widest text-wood-500 mb-6">Services</h4>
-                    <ul class="space-y-3 text-sm text-slate-400">
-                        <li><a href="projects.html" class="hover:text-white transition-colors">Home Renovations</a></li>
-                        <li><a href="resources.html" class="hover:text-white transition-colors">Veteran Housing</a></li>
-                        <li><a href="get-started.html" class="hover:text-white transition-colors">Cash Offers</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 class="text-sm font-bold uppercase tracking-widest text-wood-500 mb-6">Company</h4>
-                    <ul class="space-y-3 text-sm text-slate-400">
-                        <li><a href="about.html" class="hover:text-white transition-colors">About Us</a></li>
-                        <li><a href="contact.html" class="hover:text-white transition-colors">Contact</a></li>
-                        <li><a href="impact.html" class="hover:text-white transition-colors">Our Impact</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 class="text-sm font-bold uppercase tracking-widest text-wood-500 mb-6">Resources</h4>
-                    <ul class="space-y-3 text-sm text-slate-400">
-                        <li><a href="resources.html" class="hover:text-white transition-colors">For Veterans</a></li>
-                        <li><a href="contact.html" class="hover:text-white transition-colors">FAQ</a></li>
-                        <li><a href="about.html" class="hover:text-white transition-colors">Success Stories</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="border-t border-white/10 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center text-xs text-slate-500">
-                <p>&copy; <span id="current-year"></span> Properties 4 Creation. All rights reserved.</p>
-                <div class="flex items-center space-x-6 mt-4 md:mt-0">
-                    <a href="#" class="hover:text-wood-400 transition-colors">Privacy</a>
-                    <a href="#" class="hover:text-wood-400 transition-colors">Terms</a>
-                    <button id="footer-accessibility-toggle" class="hover:text-wood-400 transition-colors flex items-center gap-1">
-                        <span>♿</span> Accessibility
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Accessibility Widget Modal -->
-        <div id="accessibility-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden"></div>
-        <div id="accessibility-widget" class="fixed bottom-4 right-4 bg-white p-6 rounded-lg shadow-2xl border border-gray-200 z-50 min-w-80 hidden">
-            <div class="flex justify-between items-center mb-4">
-                <h3 class="font-bold text-gray-800 text-lg">Accessibility Settings</h3>
-                <button id="accessibility-close" class="text-gray-500 hover:text-gray-700">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                    </svg>
-                </button>
-            </div>
-
-            <div class="space-y-4">
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">Text Size</label>
-                    <select id="text-size-select" class="w-full p-2 border border-gray-300 rounded text-sm focus:ring-2 focus:ring-red-500 focus:border-transparent">
-                        <option value="normal">Normal</option>
-                        <option value="large">Large</option>
-                        <option value="extra-large">Extra Large</option>
-                    </select>
-                </div>
-
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">Contrast</label>
-                    <select id="contrast-select" class="w-full p-2 border border-gray-300 rounded text-sm focus:ring-2 focus:ring-red-500 focus:border-transparent">
-                        <option value="normal">Normal</option>
-                        <option value="high">High Contrast</option>
-                    </select>
-                </div>
-
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">Motion</label>
-                    <select id="motion-select" class="w-full p-2 border border-gray-300 rounded text-sm focus:ring-2 focus:ring-red-500 focus:border-transparent">
-                        <option value="normal">Normal</option>
-                        <option value="reduced">Reduced Motion</option>
-                    </select>
-                </div>
-
-                <button id="accessibility-apply" class="w-full bg-red-500 text-white py-2 rounded text-sm font-medium hover:bg-red-600 transition-colors">
-                    Apply Settings
-                </button>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer Container -->
+    <div id="footer-container"></div>
 
 
 
