--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
             </p>
 
             <div class="flex flex-col sm:flex-row gap-4 items-start">
-                <a href="projects.html" class="wood-gradient-button px-8 py-4 rounded-xl flex items-center justify-center gap-2 shadow-wood hover:shadow-xl transition-all">
+                <a href="projects.html" class="wood-gradient-button px-8 py-4 rounded-xl flex items-center justify-center gap-2 shadow-wood hover:shadow-xl transition-all text-white">
                     <span>Find Your Sanctuary</span>
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"/>
                     </svg>
                 </a>
 
-                <a href="#footer" class="px-8 py-4 border-2 border-brand-navy text-brand-navy rounded-xl font-semibold hover:bg-brand-navy hover:text-white transition-all flex items-center justify-center gap-2">
+                <a href="contact.html" class="px-8 py-4 border-2 border-brand-navy text-brand-navy rounded-xl font-semibold hover:bg-brand-navy hover:text-white transition-all flex items-center justify-center gap-2">
                     <span>Connect With Us</span>
                 </a>
             </div>
