--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'GA_MEASUREMENT_ID');
-      // Custom P4C Events
-      gtag('event', 'page_title', {'page_title': 'P4C Home - East Texas Families'});
+      // Custom Properties 4 Creations Events
+      gtag('event', 'page_title', {'page_title': 'Properties 4 Creations Home - East Texas Families'});
       gtag('event', 'platform_focus', {'platform_focus': 'east_texas_families'});
     </script>
 </head>
@@ -272,11 +272,11 @@
 <section class="py-24 bg-brand-beige">
     <div class="max-w-7xl mx-auto px-4">
         <div class="text-center mb-16">
-            <span class="text-brand-walnut font-bold tracking-wider uppercase text-sm">Why Choose P4C</span>
+                    <span class="text-brand-walnut font-bold tracking-wider uppercase text-sm">Why Choose Us</span>
             <h2 class="text-3xl md:text-4xl font-heading font-bold text-brand-navy mt-2 mb-4">More Than Just a Voucher</h2>
             <p class="text-brand-slate max-w-2xl mx-auto text-lg">
                 Most affordable housing settles for "good enough." We aim for "dream home."
-                Every P4C property features premium renovations tailored for safety, durability, and family life.
+                Every property features premium renovations tailored for safety, durability, and family life.
             </p>
         </div>
 
