--- a/test-runner.html
+++ b/test-runner.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P4C Enterprise Validation Runner</title>
+    <title>Properties 4 Creations Enterprise Validation Runner</title>
 </head>
 <body>
     <h1>P4C Enterprise Validation Test Runner</h1>
