--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
     <main>
 <section class="hero-split">
     <!-- Emotional Copy - Left Side -->
-    <div class="hero-content">
+    <div class="hero-content p-5 md:p-16 lg:p-24">
         <div class="max-w-xl">
             <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-brand-wood/10 border border-brand-wood/20 mb-8">
                 <span class="w-2 h-2 rounded-full bg-brand-wood animate-pulse"></span>
                 <span class="text-brand-wood text-xs font-bold tracking-widest uppercase">HUD-VASH & Section 8 Approved</span>
             </div>
 
-            <h1 class="text-4xl md:text-5xl lg:text-6xl font-heading font-bold mb-6 leading-tight text-brand-navy">
+            <h1 class="text-3xl md:text-5xl lg:text-6xl font-heading font-bold mb-6 leading-tight text-brand-navy">
                 A Warm Welcome Home for
                 <span class="text-brand-wood block mt-2">Families Like Yours</span>
             </h1>
