--- a/impact.html
+++ b/impact.html
@@ -51,21 +51,22 @@
 
     <!-- Main Content -->
     <main class="pt-16">
-        <!-- Hero Section -->
-        <section class="bg-gradient-to-br from-brand-navy to-brand-tan text-white py-20">
-            <div class="max-w-6xl mx-auto px-4 text-center">
-                <h1 class="text-4xl md:text-6xl font-heading font-bold mb-6">
-                    Real Families,
-                    <span class="text-brand-wood block mt-2">Real Sanctuaries</span>
-                </h1>
-                <p class="text-lg md:text-xl text-slate-200 mb-8 max-w-3xl mx-auto">
-                    Every home we create changes lives. See the human impact of fair housing solutions
-                    through stories of veterans rebuilding their futures.
-                </p>
+        <!-- Page Title Banner with Hero Background -->
+        <section class="page-title-banner hero">
+            <div class="max-w-6xl mx-auto px-4">
+                <h1>Real Families, Real Sanctuaries</h1>
 
-                <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-white/10 backdrop-blur-md border border-white/20 mb-8">
-                    <span class="w-2 h-2 rounded-full bg-green-500 animate-pulse"></span>
-                    <span class="text-white font-semibold text-sm">120 Families Housed • 42 Veterans Served</span>
+                <!-- Optional subtitle section for additional content -->
+                <div class="mt-6 max-w-3xl mx-auto">
+                    <p class="text-white text-lg leading-relaxed">
+                        Every home we create changes lives. See the human impact of fair housing solutions
+                        through stories of veterans rebuilding their futures.
+                    </p>
+
+                    <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-white/10 backdrop-blur-md border border-white/20 mt-6">
+                        <span class="w-2 h-2 rounded-full bg-green-500 animate-pulse"></span>
+                        <span class="text-white font-semibold text-sm">120 Families Housed • 42 Veterans Served</span>
+                    </div>
                 </div>
             </div>
         </section>
