--- a/projects/jefferson-riverfront.html
+++ b/projects/jefferson-riverfront.html
@@ -50,7 +50,7 @@
     <div id="header-container"></div>
 
     <!-- Main Content -->
-    <main class="pt-16">
+    <main class="pt-2">
 
         <!-- Virtual Tour Hero -->
         <section class="bg-slate-900 text-white py-8">
@@ -425,13 +425,8 @@
 <div id="footer-container"></div>
 
     <!-- P4C Interactive Libraries -->
-    <script src="../static-html.js"></script>
-    <script src="../static-navigation.js"></script>
-    <script src="../static-state.js"></script>
-    <script src="../static-search.js"></script>
-    <script src="../static-maps.js"></script>
-    <script src="../static-forms.js"></script>
-    <script src="../static-modals.js"></script>
+    <script src="components/component-loader.js"></script>
+    <script src="accessibility-enhanced.js"></script>
 
     <!-- Property Page Script -->
     <script>
