--- a/resources.html
+++ b/resources.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Housing Resources | Properties 4 Creations</title>
+    <meta name="description" content="Housing resources for veterans including Section 8, HUD-VASH, and housing rights. Calculators, eligibility guides, and support for veteran housing needs.">
+    <link rel="canonical" href="https://properties4creations.com/resources.html">
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/components.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -16,7 +18,7 @@
     </script>
 </head>
 <body class="bg-brand-beige">
-    <div id="header-container"></div>
+    <a href="#main" class="skip-to-content">Skip to main content</a>
 
     <main class="pt-2">
         <section class="page-title-banner">
