--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Properties 4 Creations - Veteran Housing Mission</title>
+    <meta name="description" content="Learn about Properties 4 Creation's mission to provide ethical, affordable housing for veterans and families. Veteran-owned and operated with Section 8 expertise.">
+    <link rel="canonical" href="https://properties4creations.com/about.html">
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/components.css">
     <script src="https://cdn.tailwindcss.com"></script>
