--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Contact Us | Properties 4 Creations</title>
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
