--- a/get-started.html
+++ b/get-started.html
@@ -8,7 +8,8 @@
 
     <!-- Design System CSS (MUST be first) -->
     <link rel="stylesheet" href="css/design-tokens.css">
-    <link rel="stylesheet" href="css/components.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -152,32 +153,24 @@
     <div id="header-container"></div>
 
     <!-- Main Content -->
-    <main class="pt-16">
-        <!-- Hero Section -->
-        <section class="bg-gradient-to-br from-brand-navy to-brand-walnut text-white py-20 relative overflow-hidden">
-            <div class="absolute inset-0 opacity-10">
-                <div class="absolute top-10 left-10 w-32 h-32 border-4 border-brand-wood rounded-full animate-spin" style="animation-duration: 20s;"></div>
-                <div class="absolute bottom-20 right-20 w-16 h-16 bg-brand-wood rounded-full float-animation" style="animation-delay: 1s;"></div>
-                <div class="absolute top-1/2 left-1/4 w-24 h-24 border-2 border-white rounded-full float-animation" style="animation-delay: 2s;"></div>
-            </div>
-            <div class="max-w-4xl mx-auto px-4 text-center relative z-10">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-heading font-bold mb-6">
-                    Turn Your Sale Into
-                    <span class="text-brand-wood block mt-2">Something Meaningful</span>
-                </h1>
-                <p class="text-lg md:text-xl text-slate-300 mb-8 max-w-2xl mx-auto">
-                    When you sell with P4C, you're not just getting a fair offer—you're creating sanctuary for veterans and building community that matters.
-                </p>
-
-                <div class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-green-50 border border-green-200 mb-8">
-                    <span class="w-3 h-3 rounded-full bg-green-500 animate-pulse"></span>
-                    <span class="text-green-800 font-semibold text-sm">No Realtor Fees • Fair Cash Offers • Veteran Impact</span>
-                </div>
-
-                <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="#impact-form" class="cta-glow px-8 py-4 bg-gradient-to-r from-brand-wood to-yellow-600 text-white rounded-xl font-bold text-lg shadow-wood hover:shadow-xl transition-all transform hover:scale-105">
-                        Start Your Impact Journey →
-                    </a>
+    <main class="pt-2">
+        <!-- Page Title Banner -->
+        <section class="page-title-banner">
+            <div class="max-w-6xl mx-auto px-4">
+                <h1>Turn Your Sale Into <span class="block text-brand-wood">Something Meaningful</span></h1>
+                <div class="mt-6 max-w-3xl mx-auto">
+                    <p class="text-lg md:text-xl text-slate-200 leading-relaxed">
+                        When you sell with P4C, you're not just getting a fair offer—you're creating sanctuary for veterans and building community that matters.
+                    </p>
+                    <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-white/10 backdrop-blur-md border border-white/20 mt-6">
+                        <span class="w-3 h-3 rounded-full bg-green-500 animate-pulse"></span>
+                        <span class="text-green-100 font-semibold text-sm">No Realtor Fees • Fair Cash Offers • Veteran Impact</span>
+                    </div>
+                    <div class="flex justify-center mt-6">
+                        <a href="#impact-form" class="px-8 py-4 bg-white text-brand-navy rounded-xl font-bold text-lg shadow-wood hover:shadow-xl transition-all transform hover:scale-105">
+                            Start Your Impact Journey →
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
