update header code

--- a/impact.html
+++ b/impact.html
@@ -54,19 +54,21 @@
     <main class="pt-16">
         <!-- Page Title Banner with Hero Background -->
         <section class="page-title-banner hero">
-            <div class="max-w-6xl mx-auto px-4">
-                <h1>Real Families, Real Sanctuaries</h1>
+            <div class="banner-content">
+                <div class="max-w-6xl mx-auto px-4">
+                    <h1>Real Families, Real Sanctuaries</h1>
 
-                <!-- Optional subtitle section for additional content -->
-                <div class="mt-6 max-w-3xl mx-auto">
-                    <p class="text-white text-lg leading-relaxed">
-                        Every home we create changes lives. See the human impact of fair housing solutions
-                        through stories of veterans rebuilding their futures.
-                    </p>
+                    <!-- Optional subtitle section for additional content -->
+                    <div class="mt-6 max-w-3xl mx-auto">
+                        <p class="text-white text-lg leading-relaxed">
+                            Every home we create changes lives. See the human impact of fair housing solutions
+                            through stories of veterans rebuilding their futures.
+                        </p>
 
-                    <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-white/10 backdrop-blur-md border border-white/20 mt-6">
-                        <span class="w-2 h-2 rounded-full bg-green-500 animate-pulse"></span>
-                        <span class="text-white font-semibold text-sm">120 Families Housed • 42 Veterans Served</span>
+                        <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-white/10 backdrop-blur-md border border-white/20 mt-6">
+                            <span class="w-2 h-2 rounded-full bg-green-500 animate-pulse"></span>
+                            <span class="text-white font-semibold text-sm">120 Families Housed • 42 Veterans Served</span>
+                        </div>
                     </div>
                 </div>
             </div>
