layout and unified branding updates

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         </section>
 
         <section class="max-w-4xl mx-auto py-12 px-4">
-            <form class="bg-white p-8 rounded-xl shadow-lg space-y-6">
+            <form action="thank-you.html" method="POST" class="bg-white p-8 rounded-xl shadow-lg space-y-6">
                 <div class="grid md:grid-cols-2 gap-6">
                     <div>
                         <label class="block font-bold text-brand-navy mb-2">Name</label>
