--- a/transparency.html
+++ b/transparency.html
@@ -8,7 +8,8 @@
 
     <!-- Design System CSS (MUST be first) -->
     <link rel="stylesheet" href="css/design-tokens.css">
-    <link rel="stylesheet" href="css/components.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- Structured Data for Transparency Page -->
     <script type="application/ld+json">
@@ -212,7 +213,7 @@
                                         <svg class="w-4 h-4 text-green-500 mt-0.5 checkmark" fill="currentColor" viewBox="0 0 20 20">
                                             <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"/>
                                         </svg>
-                                        <span>Ozone filtration for health and safety</span>
+                                        <span>Air quality improvements</span>
                                     </li>
                                 </ul>
                             </div>
