--- a/impact.html
+++ b/impact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Impact & Family Success Stories - Properties 4 Creations</title>
     <meta name="description" content="Real families, real sanctuaries. Stories of veteran housing success and community impact. See how fair housing solutions create lasting change.">
+    <link rel="canonical" href="https://properties4creations.com/impact.html">
 
     <!-- Design System CSS (MUST be first) -->
     <link rel="stylesheet" href="css/design-tokens.css">
@@ -85,7 +86,7 @@
                 <div class="flex flex-col lg:flex-row items-center gap-12 mb-20">
                     <div class="lg:w-1/2 relative">
                         <div class="absolute -top-4 -left-4 w-24 h-24 bg-brand-beige rounded-full z-0"></div>
-                        <img src="public/images/properties/before-after/patio_wood.jpg" class="relative z-10 rounded-2xl shadow-xl w-full" alt="Reynolds Family Home">
+                        <img src="public/images/properties/before-after/patio_wood.jpg" class="relative z-10 rounded-2xl shadow-xl w-full" alt="Reynolds Family Home" loading="lazy">
                         <div class="absolute bottom-8 right-8 bg-white p-4 rounded-lg shadow-lg max-w-xs z-20 border-l-4 border-brand-wood">
                             <p class="text-sm italic text-slate-600">"We applied on Monday and had keys by Friday. P4C handled all the VA paperwork."</p>
                         </div>
@@ -156,12 +157,12 @@
                     <div class="bg-white p-8 rounded-2xl shadow-wood border border-brand-beige">
                         <div class="flex items-start gap-4">
                     <img src="public/images/avatars/team/team-placeholder.png"
-                         alt="Family photo" class="w-16 h-16 rounded-full object-cover" onerror="this.src='public/images/icons/021-family.png'">
+                         alt="Family photo" class="w-16 h-16 rounded-full object-cover" onerror="this.src='public/images/icons/021-family.png'" loading="lazy">
                             <div>
                                 <h3 class="text-xl font-bold text-brand-navy mb-2">The Martinez Family</h3>
                                 <div class="flex items-center gap-2 mb-3">
                                     <span class="bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full">First-Time Homebuyers</span>
-                                    <span class="text-slate-500 text-sm">📍 Austin, TX</span>
+                                    <span class="text-slate-500 text-sm">📍 East Texas Region</span>
                                 </div>
                                 <p class="text-slate-600 mb-4">
                                     After years of renting, the Martinezes found their forever home. Our fair market pricing made homeownership possible, and the premium renovations turned their house into a place their kids call "home."
@@ -177,7 +178,7 @@
                     <div class="bg-white p-8 rounded-2xl shadow-wood border border-brand-beige">
                         <div class="flex items-start gap-4">
                             <img src="public/images/icons/034-soldier.png"
-                                 alt="Staff Sgt. Thompson veteran photo" class="w-16 h-16 rounded-full object-cover">
+                                 alt="Staff Sgt. Thompson veteran photo" class="w-16 h-16 rounded-full object-cover" loading="lazy">
                             <div>
                                 <h3 class="text-xl font-bold text-brand-navy mb-2">Staff Sgt. Thompson</h3>
                                 <div class="flex items-center gap-2 mb-3">
@@ -198,7 +199,7 @@
                     <div class="bg-white p-8 rounded-2xl shadow-wood border border-brand-beige">
                         <div class="flex items-start gap-4">
                             <img src="public/images/icons/022-family-1.png"
-                                 alt="Garcia seniors family photo" class="w-16 h-16 rounded-full object-cover">
+                                 alt="Garcia seniors family photo" class="w-16 h-16 rounded-full object-cover" loading="lazy">
                             <div>
                                 <h3 class="text-xl font-bold text-brand-navy mb-2">The Garcia Seniors</h3>
                                 <div class="flex items-center gap-2 mb-3">
@@ -260,8 +261,7 @@
 
                 <div class="mt-12 text-center">
                     <p class="text-slate-400 text-sm">
-                        <span class="text-brand-wood font-semibold">100% Success Rate:</span>
-                        Every qualified applicant finds their home within 30 days
+                        <span class="text-brand-wood font-semibold">Keys within 30 days for qualified applicants</span>
                     </p>
                 </div>
             </div>
