--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
             </div>
 
             <h1 class="text-3xl md:text-5xl lg:text-6xl font-heading font-bold mb-6 leading-tight text-brand-navy">
-                A Warm Welcome Home for
-                <span class="text-brand-wood block mt-2">Families Like Yours</span>
+                East Texas Homes Built for
+                <span class="text-brand-wood block mt-2">Dignity, Trust, and Transformation</span>
             </h1>
 
             <p class="text-lg md:text-xl text-slate-600 mb-8 font-light leading-relaxed">
-                Everyone deserves a place to call home. We create safe, beautiful sanctuaries where families can heal, grow, and build new memories together. No judgment, just genuine support and premium renovations you can trust.
+                We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and local pride. Our veteran-owned approach delivers premium renovations that honor those who served.
             </p>
 
             <div class="flex flex-col sm:flex-row gap-4 items-start">
@@ -313,20 +313,20 @@
     <div class="max-w-6xl mx-auto px-4 relative z-10">
         <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center divide-x divide-brand-navy/5">
             <div class="p-4 group">
-                <div class="text-4xl font-bold text-brand-navy mb-1 group-hover:text-brand-wood transition-colors">120+</div>
-                <div class="text-brand-walnut font-semibold uppercase text-xs tracking-wider">Safe Homes Created</div>
+                <div class="text-4xl font-bold text-brand-navy mb-1 group-hover:text-brand-wood transition-colors">40+</div>
+                <div class="text-brand-walnut font-semibold uppercase text-xs tracking-wider">Families Housed in East Texas</div>
             </div>
             <div class="p-4 group">
-                <div class="text-4xl font-bold text-brand-navy mb-1 group-hover:text-brand-wood transition-colors">85+</div>
-                <div class="text-brand-walnut font-semibold uppercase text-xs tracking-wider">Families Housed</div>
+                <div class="text-4xl font-bold text-brand-navy mb-1 group-hover:text-brand-wood transition-colors">25</div>
+                <div class="text-brand-walnut font-semibold uppercase text-xs tracking-wider">Properties Renovated</div>
             </div>
             <div class="p-4 group">
-                <div class="text-4xl font-bold text-brand-navy mb-1 group-hover:text-brand-wood transition-colors">42</div>
-                <div class="text-brand-walnut font-semibold uppercase text-xs tracking-wider">Veterans Served</div>
+                <div class="text-4xl font-bold text-brand-navy mb-1 group-hover:text-brand-wood transition-colors">4</div>
+                <div class="text-brand-walnut font-semibold uppercase text-xs tracking-wider">Cities Served</div>
             </div>
             <div class="p-4 group">
                 <div class="text-4xl font-bold text-brand-navy mb-1 group-hover:text-brand-wood transition-colors">100%</div>
-                <div class="text-brand-walnut font-semibold uppercase text-xs tracking-wider">Section 8 Compliance</div>
+                <div class="text-brand-walnut font-semibold uppercase text-xs tracking-wider">Voucher Acceptance</div>
             </div>
         </div>
     </div>
@@ -346,25 +346,25 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div class="bg-white p-8 rounded-2xl shadow-lg border-b-4 border-brand-wood hover:-translate-y-2 transition-transform group">
                 <div class="w-14 h-14 bg-brand-navy/5 rounded-xl flex items-center justify-center mb-6 text-3xl group-hover:bg-brand-wood/10 transition-colors">🛡️</div>
-                <h3 class="text-xl font-bold text-brand-navy mb-3">Safety First Standards</h3>
+                <h3 class="text-xl font-bold text-brand-navy mb-3">Rigorous East Texas Renovation Standards</h3>
                 <p class="text-brand-slate text-sm leading-relaxed">
-                    From reinforced deadbolts to certified electrical systems, our homes exceed Section 8 inspection requirements to protect what matters most.
+                    East Texas homes face unique challenges — from pine tree roots to flood plains. Our renovation standards are built specifically for our region's climate, soil conditions, and community needs.
                 </p>
             </div>
 
             <div class="bg-white p-8 rounded-2xl shadow-lg border-b-4 border-brand-wood hover:-translate-y-2 transition-transform group">
                 <div class="w-14 h-14 bg-brand-navy/5 rounded-xl flex items-center justify-center mb-6 text-3xl group-hover:bg-brand-wood/10 transition-colors">💎</div>
-                <h3 class="text-xl font-bold text-brand-navy mb-3">Premium Finishes</h3>
+                <h3 class="text-xl font-bold text-brand-navy mb-3">Craftsmanship That Honors Our Veterans</h3>
                 <p class="text-brand-slate text-sm leading-relaxed">
-                    We install granite countertops, luxury vinyl plank flooring, and modern HVAC systems. We believe affordable housing should be beautiful housing.
+                    We honor veterans' service with exceptional craftsmanship. Every renovation reflects our deep appreciation for those who serve, building homes worthy of their dignity and sacrifice.
                 </p>
             </div>
 
             <div class="bg-white p-8 rounded-2xl shadow-lg border-b-4 border-brand-wood hover:-translate-y-2 transition-transform group">
                 <div class="w-14 h-14 bg-brand-navy/5 rounded-xl flex items-center justify-center mb-6 text-3xl group-hover:bg-brand-wood/10 transition-colors">🤝</div>
-                <h3 class="text-xl font-bold text-brand-navy mb-3">Veteran Advocacy</h3>
+                <h3 class="text-xl font-bold text-brand-navy mb-3">Dedicated Housing for Those Who Served</h3>
                 <p class="text-brand-slate text-sm leading-relaxed">
-                    We work directly with HUD-VASH caseworkers to streamline the approval process for military veterans, ensuring you get keys in hand faster.
+                    Veteran-owned, veteran-focused. We understand military housing challenges firsthand and prioritize service members across East Texas with expedited processing and tribute renovations.
                 </p>
             </div>
         </div>
@@ -377,7 +377,7 @@
         <section class="py-16 bg-white">
             <div class="max-w-7xl mx-auto px-4">
                 <div class="text-center mb-12">
-                    <h2 class="text-3xl font-bold text-brand-navy mb-4">Our Nationwide Impact</h2>
+                    <h2 class="text-3xl font-bold text-brand-navy mb-4">Our East Texas Impact</h2>
                     <p class="text-lg text-slate-600">Interactive map showing our property transformation locations</p>
                 </div>
                 <div class="bg-slate-100 rounded-lg h-64 md:h-96 relative">
